samples/_failures_safe/1760960419_e9fdd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c99a4182.c: In function ‘main’:
./samples/SAFE/__tmp_c99a4182.c:164:13: error: expected declaration or statement at end of input
  164 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_c99a4182.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c99a4182.c:164:13: error: expected declaration or statement at end of input
